@@ -28,6 +28,8 @@ import java.util.List;
 import java.util.UUID;
 import java.util.concurrent.*;
 import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
 import java.util.zip.GZIPInputStream;
 
@@ -73,10 +75,28 @@ public class ReverseProxyTest {
             )
             .start();
 
-        String requestBody = largeRandomString();
-
+        final StringBuilder bodyBuilder = new StringBuilder();
         HttpResponse<String> someText = client.send(HttpRequest.newBuilder()
-            .method("POST", HttpRequest.BodyPublishers.ofString(requestBody))
+            .method("POST", HttpRequest.BodyPublishers.fromPublisher(subscriber -> {
+                AtomicInteger counter = new AtomicInteger();
+                subscriber.onSubscribe(new Flow.Subscription() {
+                    @Override
+                    public void request(long n) {
+                        if (counter.incrementAndGet() <= 100) {
+                            final String partial = UUID.randomUUID() + " ";
+                            bodyBuilder.append(partial);
+                            subscriber.onNext(ByteBuffer.wrap(partial.getBytes()));
+                        } else {
+                            subscriber.onComplete();
+                        }
+
+                    }
+
+                    @Override
+                    public void cancel() {
+                    }
+                });
+            }))
             .uri(reverseProxyServer.uri().resolve("/some-text"))
             .header("Connection", "Keep-Alive, Foo, Bar")
             .header("foo", "abc")
@@ -91,7 +111,7 @@ public class ReverseProxyTest {
         assertThat(headers.firstValue("Content-Length").orElse(""), is(notNullValue()));
         assertThat(headers.firstValue("Via").orElse(""), is("HTTP/1.1 private"));
         assertThat(headers.firstValue("Forwarded").isEmpty(), is(true));
-        assertThat(someText.body(), is("Hello: " + requestBody));
+        assertThat(someText.body(), is("Hello: " + bodyBuilder));
         assertThat("Timed out waiting for notification",
             notificationAddedLatch.await(10, TimeUnit.SECONDS), is(true));
         assertThat("Actual: " + notifications, notifications, contains("Did POST /some-text and returned a 201 from " + targetServer.uri().resolve("/some-text")));
@@ -113,12 +133,12 @@ public class ReverseProxyTest {
             .header("Accept-Encoding", "hmm, gzip, deflate"))) { // custom header stops okhttpclient from hiding gzip
             assertThat(resp.code(), is(200));
             assertThat(resp.header("content-encoding"), is("gzip"));
-            String expected = new String(Files.readAllBytes(Paths.get("pom.xml")), UTF_8);
+            String expected = Files.readString(Paths.get("pom.xml"));
             String unzipped;
             try (ByteArrayOutputStream boas = new ByteArrayOutputStream();
                  InputStream is = new GZIPInputStream(resp.body().byteStream())) {
                 Mutils.copy(is, boas, 8192);
-                unzipped = boas.toString("UTF-8");
+                unzipped = boas.toString(UTF_8);
             }
             assertThat(unzipped, equalTo(expected));
         }
@@ -154,7 +174,7 @@ public class ReverseProxyTest {
     }
 
     @Test
-    public void itCanProxyPieceByPiece() throws InterruptedException, ExecutionException, TimeoutException, IOException {
+    public void itCanProxyPieceByPiece() throws InterruptedException, IOException {
         String m1 = StringUtils.randomAsciiStringOfLength(20000);
         String m2 = StringUtils.randomAsciiStringOfLength(120000);
         String m3 = StringUtils.randomAsciiStringOfLength(20000);
@@ -179,7 +199,7 @@ public class ReverseProxyTest {
     }
 
     @Test
-    public void theHostNameProxyingCanBeTurnedOff() throws InterruptedException, ExecutionException, TimeoutException, IOException {
+    public void theHostNameProxyingCanBeTurnedOff() throws InterruptedException, IOException {
         MuServer targetServer = httpsServer()
             .addHandler(Method.GET, "/", (req, resp, pp) -> resp.write(
                 "The host header is " + req.headers().get("Host") +
@@ -243,6 +263,36 @@ public class ReverseProxyTest {
     }
 
     @Test
+    public void http1ClientToHttp2ServerWorks() throws Exception {
+        MuServer targetServer = httpsServer()
+            .withHttp2Config(http2EnabledIfAvailable())
+            .addHandler(Method.GET, "/", (req, resp, pp) -> {
+                String forwarded = req.headers().forwarded().stream().map(f -> f.proto() + " with host " + f.host()).collect(Collectors.joining(", "));
+                resp.write("The Via header is "
+                    + req.headers().getAll("via") + " and forwarded is " + forwarded);
+            })
+            .start();
+
+        MuServer proxy = httpsServer()
+            .withHttp2Config(http2EnabledIfAvailable())
+            .addHandler(reverseProxy()
+                .withViaName("proxy")
+                .withUriMapper(UriMapper.toDomain(targetServer.uri()))
+            )
+            .start();
+
+        HttpResponse<String> resp = client.send(HttpRequest.newBuilder()
+            .version(HttpClient.Version.HTTP_1_1)
+            .uri(proxy.uri().resolve("/"))
+            .build(), HttpResponse.BodyHandlers.ofString());
+
+        assertThat(resp.headers().allValues("Date"), hasSize(1));
+        assertThat(resp.headers().allValues("Via"), contains("HTTP/1.1 proxy"));
+        assertThat(resp.body(), is("The Via header is [HTTP/1.1 proxy]" +
+            " and forwarded is https with host " + proxy.uri().getAuthority()));
+    }
+
+    @Test
     public void http2ToHttp1ToTargetWorks() throws Exception {
         runIfJava9OrLater();
         MuServer targetServer = httpServer()
@@ -275,8 +325,8 @@ public class ReverseProxyTest {
                 assertThat(resp.headers("date"), hasSize(1));
                 assertThat(resp.headers("via"), contains("HTTP/1.1 internalrp, HTTP/2.0 externalrp"));
                 assertThat(resp.body().string(), is("The Via header is [HTTP/2.0 externalrp, HTTP/1.1 internalrp]" +
-                        " and forwarded is https with host " + externalRP.uri().getAuthority() + ", http with host "
-                        + externalRP.uri().getAuthority()));
+                    " and forwarded is https with host " + externalRP.uri().getAuthority() + ", http with host "
+                    + externalRP.uri().getAuthority()));
             }
         }
     }
@@ -350,6 +400,37 @@ public class ReverseProxyTest {
         }
     }
 
+    @Test
+    public void canReceivedMultipleSetCookieHeaders() {
+        MuServer targetServer = httpServer()
+            .addHandler(Method.GET, "/", (request, response, pp) -> {
+                response.status(200);
+                response.headers().add("set-cookie", "cooke_a=a");
+                response.headers().add("set-cookie", "cooke_b=b");
+            })
+            .start();
+
+        MuServer rp = httpServer()
+            .addHandler(reverseProxy()
+                .withViaName("externalrp")
+                .withUriMapper(UriMapper.toDomain(targetServer.uri()))
+            )
+            .start();
+
+        try (okhttp3.Response resp = call(request(targetServer.uri().resolve("/")))) {
+            assertThat(resp.code(), is(200));
+            assertThat(resp.headers("set-cookie"), hasSize(2));
+            assertThat(resp.headers("set-cookie").get(0), equalTo("cooke_a=a"));
+            assertThat(resp.headers("set-cookie").get(1), equalTo("cooke_b=b"));
+        }
+
+        try (okhttp3.Response resp = call(request(rp.uri().resolve("/")))) {
+            assertThat(resp.code(), is(200));
+            assertThat(resp.headers("set-cookie"), hasSize(2));
+            assertThat(resp.headers("set-cookie").get(0), equalTo("cooke_a=a"));
+            assertThat(resp.headers("set-cookie").get(1), equalTo("cooke_b=b"));
+        }
+    }
 
     private void runIfJava9OrLater() {
         Assume.assumeThat("This test runs only on java 9 an later", System.getProperty("java.specification.version"), not(equalTo("1.8")));
@@ -366,6 +447,8 @@ public class ReverseProxyTest {
             })
             .start();
 
+        AtomicReference<String> removedHeader = new AtomicReference<>();
+
         MuServer reverseProxyServer = httpServer()
             .addHandler(reverseProxy()
                 .withUriMapper(UriMapper.toDomain(targetServer.uri()))
@@ -379,6 +462,7 @@ public class ReverseProxyTest {
                     headers.set("X-Blah", clientRequest.attribute("blah"));
                     headers.set("X-Added-By-Resp", "Added-by-resp");
                     headers.remove("X-Added-By-Target");
+                    removedHeader.set(targetResponse.headers().firstValue("X-Added-By-Target").get());
                 })
                 .addProxyCompleteListener(new Slf4jResponseLogger())
             )
@@ -389,21 +473,16 @@ public class ReverseProxyTest {
             .uri(reverseProxyServer.uri().resolve("/"))
             .build(), HttpResponse.BodyHandlers.ofString());
 
-
         assertThat(resp.statusCode(), is(400));
         assertThat(resp.headers().allValues("X-Added-By-Resp"), contains("Added-by-resp"));
         assertThat(resp.headers().allValues("X-Added-By-Target"), empty());
-        String body = resp.body();
-        assertThat(body, equalTo("X-Blocked = null, X-Added = I was added"));
+        assertThat(resp.body(), equalTo("X-Blocked = null, X-Added = I was added"));
+        assertThat(removedHeader.get(), equalTo("Boo"));
     }
 
     @Test
     public void largeHeadersCanBeConfigured() throws Exception {
-        StringBuilder sb = new StringBuilder();
-        for (int i = 0; i < 26000; i++) {
-            sb.append("a");
-        }
-        String value = sb.toString();
+        String value = "a".repeat(26000);
         int maxHeaderSize = 32768;
         MuServer targetServer = httpServer()
             .withMaxHeadersSize(maxHeaderSize)
